--- a/src/styles/variables/container.scss
+++ b/src/styles/variables/container.scss
@@ -1,27 +1,25 @@
-/* stylelint-disable color-hex-length */
-
 $colors: (
-  'grey': #828282,
-  'black': #4f4f4f,
-  'greyLight': #bdbdbd,
-  'blue': #2d9cdb,
-  'blueMid': #1579c6,
-  'blueDark': #2262b9,
-  'blueLight': #56ccf2,
-  'blueMuted': #d7e7f5,
-  'green': #3cb848,
-  'greenDark': #219653,
-  'greenLight': #6fcf97,
-  'cream': #e1d9c0,
-  'yellow': #f2c94c,
-  'white': #f4f7f9,
-  'red': #f24545,
-  'brown': #ad7849,
-  'orange': #f2994a,
-  'pink': #ff649e,
-  'magenta': #d12767,
-  'maroon': #a62f5a,
-  'purple': #9946db,
-  'duckEgg': #89c1ab,
-  'transparent': #ffffff00,
+  'grey': var(--mobius-container-color-grey),
+  'black': var(--mobius-container-color-black),
+  'greyLight': var(--mobius-container-color-grey-light),
+  'blue': var(--mobius-container-color-blue),
+  'blueMid': var(--mobius-container-color-blue-mid),
+  'blueDark': var(--mobius-container-color-blue-dark),
+  'blueLight': var(--mobius-container-color-blue-light),
+  'blueMuted': var(--mobius-container-color-blue-muted),
+  'green': var(--mobius-container-color-green),
+  'greenDark': var(--mobius-container-color-green-dark),
+  'greenLight': var(--mobius-container-color-green-light),
+  'cream': var(--mobius-container-color-cream),
+  'yellow': var(--mobius-container-color-yellow),
+  'white': var(--mobius-container-color-white),
+  'red': var(--mobius-container-color-red),
+  'brown': var(--mobius-container-color-brown),
+  'orange': var(--mobius-container-color-orange),
+  'pink': var(--mobius-container-color-pink),
+  'magenta': var(--mobius-container-color-magenta),
+  'maroon': var(--mobius-container-color-maroon),
+  'purple': var(--mobius-container-color-purple),
+  'duckEgg': var(--mobius-container-color-duck-egg),
+  'transparent': var(--mobius-container-color-transparent),
 );
