--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -16,6 +16,7 @@ h2,
 h3,
 h4 {
   @include title.title;
+  font-family: var(--font-family-heading);
 }
 
 h1 {
@@ -33,6 +34,14 @@ h3 {
 
 h4 {
   font-size: var(--font-size-h4);
+}
+
+h5 {
+  font-size: var(--font-size-h5);
+}
+
+h6 {
+  font-size: var(--font-size-h6);
 }
 
 p {
