refactor: use radius tokens

--- a/src/components/canvas/Alert/Alert.module.scss
+++ b/src/components/canvas/Alert/Alert.module.scss
@@ -1,6 +1,6 @@
 .alert {
   background: var(--skin-background);
-  border-radius: 0.25em;
+  border-radius: var(--radius-md);
   color: var(--skin-color);
   padding: var(--spacing-md);
 
