--- a/src/styles/variables/radius.css
+++ b/src/styles/variables/radius.css
@@ -1,5 +1,5 @@
 :root {
-  --radius-none: var(--mobius-radius-none);
+  --radius-xs: var(--mobius-radius-xs);
   --radius-sm: var(--mobius-radius-sm);
   --radius-md: var(--mobius-radius-md);
   --radius-lg: var(--mobius-radius-lg);
