--- a/src/components/content/BarStack/BarStack.module.scss
+++ b/src/components/content/BarStack/BarStack.module.scss
@@ -1,7 +1,7 @@
 @use '../../../styles/variables/color';
 
 .bar-stack {
-  --bar-stack-border-radius: 0.25rem;
+  --bar-stack-border-radius: var(--radius-sm);
   --bar-stack-item-height: 1.5rem;
   --bar-stack-background: var(--mobius-color-forest-25);
 
