--- a/src/styles/themes/default/main.scss
+++ b/src/styles/themes/default/main.scss
@@ -1,5 +1,5 @@
 @use '../../mixins/skin';
 
-$skins: light, dark, info, neutral, positive, negative, attention;
+$skins: light, dark, info, attention, neutral, positive, negative;
 
 @include skin.create-skins($skins);
