--- a/src/styles/mixins/skin.scss
+++ b/src/styles/mixins/skin.scss
@@ -2,6 +2,7 @@
   --skin-background: var(--mobius-skin-background-#{$type});
   --skin-background-muted: var(--mobius-skin-background-muted-#{$type});
   --skin-border-color: var(--mobius-skin-border-color-#{$type});
+  --skin-border-color-muted: var(--mobius-skin-border-color-muted-#{$type});
   --skin-color: var(--mobius-skin-color-#{$type});
   --skin-color-muted: var(--mobius-skin-color-muted-#{$type});
   --skin-heading-color: var(--mobius-skin-heading-color-#{$type});
