--- a/src/styles/variables/color.scss
+++ b/src/styles/variables/color.scss
@@ -29,56 +29,118 @@ $harp: #ebf5f1;
 $duck-egg: #89c1ab;
 $citrus: #c7d56b;
 
+:root {
+  --color-forest: var(--mobius-color-forest);
+  --color-forest-75: var(--mobius-color-forest-75);
+  --color-forest-50: var(--mobius-color-forest-50);
+  --color-forest-25: var(--mobius-color-forest-25);
+
+  --color-earth: var(--mobius-color-earth);
+  --color-earth-75: var(--mobius-color-earth-75);
+  --color-earth-50: var(--mobius-color-earth-50);
+  --color-earth-25: var(--mobius-color-earth-25);
+
+  --color-sand: var(--mobius-color-sand);
+  --color-sand-75: var(--mobius-color-sand-75);
+  --color-sand-50: var(--mobius-color-sand-50);
+  --color-sand-25: var(--mobius-color-sand-25);
+
+  --color-lime: var(--mobius-color-lime);
+  --color-lime-75: var(--mobius-color-lime-75);
+  --color-lime-50: var(--mobius-color-lime-50);
+  --color-lime-25: var(--mobius-color-lime-25);
+
+  --color-sky: var(--mobius-color-sky);
+  --color-sky-75: var(--mobius-color-sky-75);
+  --color-sky-50: var(--mobius-color-sky-50);
+  --color-sky-25: var(--mobius-color-sky-25);
+
+  --color-rose: var(--mobius-color-rose);
+  --color-rose-75: var(--mobius-color-rose-75);
+  --color-rose-50: var(--mobius-color-rose-50);
+  --color-rose-25: var(--mobius-color-rose-25);
+
+  --color-cloud: var(--mobius-color-cloud);
+  --color-cloud-75: var(--mobius-color-cloud-75);
+  --color-coal: var(--mobius-color-coal);
+  --color-steel: var(--mobius-color-steel);
+
+  --color-lemon: var(--mobius-color-lemon);
+  --color-orange: var(--mobius-color-orange);
+  --color-lilac: var(--mobius-color-lilac);
+  --color-violet: var(--mobius-color-violet);
+
+  --color-white: var(--mobius-color-white);
+  --color-black: var(--mobius-color-black);
+  --color-body: var(--mobius-color-body);
+  --color-body-muted: var(--mobius-color-body-muted);
+  --color-background: var(--mobius-color-background);
+  --color-background-muted: var(--mobius-color-background-muted);
+  --color-accent: var(--mobius-color-accent);
+  --color-link: var(--mobius-color-link);
+  --color-neutral: var(--mobius-color-neutral);
+  --color-neutral-light: var(--mobius-color-neutral-light);
+  --color-positive: var(--mobius-color-positive);
+  --color-positive-light: var(--mobius-color-positive-light);
+  --color-negative: var(--mobius-color-negative);
+  --color-negative-light: var(--mobius-color-negative-light);
+  --color-no-stream: var(--mobius-color-no-stream);
+  --color-dry-stream: var(--mobius-color-dry-stream);
+  --color-residual-stream: var(--mobius-color-residual-stream);
+  --color-food-stream: var(--mobius-color-food-stream);
+  --color-garden-stream: var(--mobius-color-garden-stream);
+}
+
 $colors: (
-  'forest': var(--mobius-color-forest),
-  'forest-75': var(--mobius-color-forest-75),
-  'forest-50': var(--mobius-color-forest-50),
-  'forest-25': var(--mobius-color-forest-25),
-  'earth': var(--mobius-color-earth),
-  'earth-75': var(--mobius-color-earth-75),
-  'earth-50': var(--mobius-color-earth-50),
-  'earth-25': var(--mobius-color-earth-25),
-  'sand': var(--mobius-color-sand),
-  'sand-75': var(--mobius-color-sand-75),
-  'sand-50': var(--mobius-color-sand-50),
-  'sand-25': var(--mobius-color-sand-25),
-  'lime': var(--mobius-color-lime),
-  'lime-75': var(--mobius-color-lime-75),
-  'lime-50': var(--mobius-color-lime-50),
-  'lime-25': var(--mobius-color-lime-25),
-  'sky': var(--mobius-color-sky),
-  'sky-75': var(--mobius-color-sky-75),
-  'sky-50': var(--mobius-color-sky-50),
-  'sky-25': var(--mobius-color-sky-25),
-  'rose': var(--mobius-color-rose),
-  'rose-75': var(--mobius-color-rose-75),
-  'rose-50': var(--mobius-color-rose-50),
-  'rose-25': var(--mobius-color-rose-25),
-  'cloud': var(--mobius-color-cloud),
-  'cloud-75': var(--mobius-color-cloud-75),
-  'coal': var(--mobius-color-coal),
-  'steel': var(--mobius-color-steel),
-  'lemon': var(--mobius-color-lemon),
-  'orange': var(--mobius-color-orange),
-  'lilac': var(--mobius-color-lilac),
-  'violet': var(--mobius-color-violet),
-  'white': var(--mobius-color-white),
-  'black': var(--mobius-color-black),
-  'body': var(--mobius-color-body),
-  'body-muted': var(--mobius-color-body-muted),
-  'background': var(--mobius-color-background),
-  'background-muted': var(--mobius-color-background-muted),
-  'accent': var(--mobius-color-accent),
-  'link': var(--mobius-color-link),
-  'neutral': var(--mobius-color-neutral),
-  'neutral-light': var(--mobius-color-neutral-light),
-  'positive': var(--mobius-color-positive),
-  'positive-light': var(--mobius-color-positive-light),
-  'negative': var(--mobius-color-negative),
-  'negative-light': var(--mobius-color-negative-light),
-  'no-stream': var(--mobius-color-no-stream),
-  'dry-stream': var(--mobius-color-dry-stream),
-  'residual-stream': var(--mobius-color-residual-stream),
-  'food-stream': var(--mobius-color-food-stream),
-  'garden-stream': var(--mobius-color-garden-stream),
+  'forest': var(--color-forest),
+  'forest-75': var(--color-forest-75),
+  'forest-50': var(--color-forest-50),
+  'forest-25': var(--color-forest-25),
+  'earth': var(--color-earth),
+  'earth-75': var(--color-earth-75),
+  'earth-50': var(--color-earth-50),
+  'earth-25': var(--color-earth-25),
+  'sand': var(--color-sand),
+  'sand-75': var(--color-sand-75),
+  'sand-50': var(--color-sand-50),
+  'sand-25': var(--color-sand-25),
+  'lime': var(--color-lime),
+  'lime-75': var(--color-lime-75),
+  'lime-50': var(--color-lime-50),
+  'lime-25': var(--color-lime-25),
+  'sky': var(--color-sky),
+  'sky-75': var(--color-sky-75),
+  'sky-50': var(--color-sky-50),
+  'sky-25': var(--color-sky-25),
+  'rose': var(--color-rose),
+  'rose-75': var(--color-rose-75),
+  'rose-50': var(--color-rose-50),
+  'rose-25': var(--color-rose-25),
+  'cloud': var(--color-cloud),
+  'cloud-75': var(--color-cloud-75),
+  'coal': var(--color-coal),
+  'steel': var(--color-steel),
+  'lemon': var(--color-lemon),
+  'orange': var(--color-orange),
+  'lilac': var(--color-lilac),
+  'violet': var(--color-violet),
+  'white': var(--color-white),
+  'black': var(--color-black),
+  'body': var(--color-body),
+  'body-muted': var(--color-body-muted),
+  'background': var(--color-background),
+  'background-muted': var(--color-background-muted),
+  'accent': var(--color-accent),
+  'link': var(--color-link),
+  'neutral': var(--color-neutral),
+  'neutral-light': var(--color-neutral-light),
+  'positive': var(--color-positive),
+  'positive-light': var(--color-positive-light),
+  'negative': var(--color-negative),
+  'negative-light': var(--color-negative-light),
+  'no-stream': var(--color-no-stream),
+  'dry-stream': var(--color-dry-stream),
+  'residual-stream': var(--color-residual-stream),
+  'food-stream': var(--color-food-stream),
+  'garden-stream': var(--color-garden-stream),
 );
