--- a/src/components/controls/Menubar/Menubar.module.scss
+++ b/src/components/controls/Menubar/Menubar.module.scss
@@ -1,24 +1,7 @@
-@use '../../../styles/variables/color';
 @use '../../../styles/variables/breakpoint';
 
-@mixin menubar-link {
-  color: var(--skin-link-color);
-  transition: background var(--transition);
-
-  &:hover,
-  &:active {
-    text-decoration: none;
-  }
-
-  &:hover {
-    background: var(--skin-background);
-  }
-}
-
 .menubar {
-  --menubar-highlight-width: 4px;
-
-  background: var(--skin-background-muted);
+  background: var(--skin-background);
 
   @media (min-width: breakpoint.$tablet) {
     align-items: center;
@@ -48,17 +31,37 @@
   }
 
   &__tab {
+    --tab-background: var(--skin-background);
+    --tab-highlight-color: var(--skin-color);
+    --tab-highlight-width: 4px;
+
     display: block;
+    font-size: var(--font-size-sm);
+    font-weight: var(--font-weight-bold);
     min-width: 25%;
     position: relative;
 
+    a {
+      color: var(--skin-background-muted-dark);
+      text-decoration: none;
+      transition: background var(--transition) color var(--transition);
+
+      &:hover,
+      &:focus {
+        color: var(--skin-color);
+      }
+
+      &:focus {
+        outline: none;
+      }
+    }
+
     &-inner {
       &::before {
-        background: var(--color-positive);
+        background: var(--tab-highlight-color);
         content: '';
         display: block;
-        height: 4px;
-        height: 0;
+        height: var(--tab-highlight-width);
         left: 0;
         opacity: 0;
         position: absolute;
@@ -67,62 +70,51 @@
         width: 100%;
       }
 
-      &:hover::before {
-        height: var(--menubar-highlight-width);
-        opacity: 0.5;
-      }
-
-      a {
-        @include menubar-link;
-        align-items: center;
-        display: flex;
-        font-size: var(--font-size-sm);
-        font-weight: var(--font-weight-bold);
-        justify-content: center;
-        min-height: var(--spacing-thumb);
-        padding: var(--spacing-md);
-        text-align: center;
-      }
-    }
-
-    &--disabled &-inner {
-      &:hover::before {
-        height: 0;
-      }
-
-      a {
-        color: var(--color-body);
-        cursor: default;
-        pointer-events: none;
-
-        &:hover {
-          background: var(--color-accent);
-        }
-      }
+      align-items: center;
+      color: var(--skin-background-muted-dark);
+      display: flex;
+      justify-content: center;
+      min-height: var(--spacing-thumb);
+      padding: var(--spacing-md);
+      text-align: center;
     }
 
     &--active &-inner {
       &::before {
-        height: var(--menubar-highlight-width);
         opacity: 1;
       }
 
+      background: var(--input-background-disabled);
+      color: var(--color-body);
+
       a {
-        background: var(--skin-background);
-        color: var(--color-positive);
-        cursor: default;
+        color: var(--color-body);
       }
+    }
+
+    &--completed &-inner {
+      &::before {
+        --tab-highlight-color: var(--color-positive);
+        opacity: 1;
+      }
+    }
+
+    &-inner:focus-within::before {
+      --tab-highlight-color: var(--input-border-hover);
+      opacity: 1;
+    }
+
+    &--disabled &-inner {
+      color: var(--button-color-disabled);
     }
   }
 
   &__back {
     a {
-      @include menubar-link;
       display: block;
-      font-size: var(--font-size-sm);
-      font-weight: var(--font-weight-bold);
       min-height: var(--spacing-thumb);
       padding: var(--spacing-md);
+      text-decoration: none;
     }
   }
 }
