feat: button, dropdown and modal style adjustments

--- a/src/components/controls/Button/Button.module.scss
+++ b/src/components/controls/Button/Button.module.scss
@@ -10,7 +10,7 @@
     border-color: var(--button-border-color-hover);
   }
 
-  &:focus-within {
+  &:focus {
     border-color: var(--button-border-color-focus);
   }
 
