--- a/src/components/content/Lead/Lead.module.scss
+++ b/src/components/content/Lead/Lead.module.scss
@@ -1,4 +1,4 @@
 .lead {
-  font-size: var(--font-size-lead, var(--font-size-xl));
+  font-size: var(--font-size-lead, var(--font-size-lg));
   font-weight: var(--font-weight-base);
 }
