--- a/src/components/content/Container/Container.module.scss
+++ b/src/components/content/Container/Container.module.scss
@@ -17,6 +17,8 @@
   }
 
   &__title {
-    font-size: 1rem;
+    font-family: var(--font-family);
+    font-size: var(--font-size-base);
+    text-transform: none;
   }
 }
