--- a/src/styles/variables/font.scss
+++ b/src/styles/variables/font.scss
@@ -1,6 +1,6 @@
 :root {
   --font-family: var(--mobius-font-family);
-  --font-family-heading: 'Marr Sans Cond Web', var(--font-family);
+  --font-family-heading: var(--mobius-font-family-heading);
 
   --font-line-height: var(--mobius-font-line-height);
   --font-line-height-sm: var(--mobius-font-line-height-sm);
@@ -17,6 +17,8 @@
   --font-size-h2: var(--mobius-font-size-h2);
   --font-size-h3: var(--mobius-font-size-h3);
   --font-size-h4: var(--mobius-font-size-h4);
+  --font-size-h5: var(--mobius-font-size-h5);
+  --font-size-h6: var(--mobius-font-size-h6);
 
   --font-weight-base: var(--mobius-font-weight-base);
   --font-weight-light: var(--mobius-font-weight-light);
