fix: heading styles

--- a/src/styles/mixins/title.scss
+++ b/src/styles/mixins/title.scss
@@ -1,7 +1,6 @@
 @mixin title {
   color: var(--skin-heading-color);
-  font-weight: var(--heading-font-weight, 700);
-  letter-spacing: -0.025em;
+  font-weight: var(--heading-font-weight, var(--font-weight-bold));
   line-height: var(--font-line-height-sm);
   margin-bottom: var(--spacing-xs);
   margin-top: 0;
