--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -14,8 +14,16 @@ body {
 h1,
 h2,
 h3,
-h4 {
+h4,
+h5,
+h6 {
   @include title.title;
+}
+
+h1,
+h2,
+h3,
+h4 {
   font-family: var(--font-family-heading);
   text-transform: uppercase;
 }
