fix: faq click a11y

--- a/src/components/content/Faq/Faq.module.scss
+++ b/src/components/content/Faq/Faq.module.scss
@@ -1,9 +1,28 @@
 .faq {
-  --card-border-radius: var(--radius-sm);
-
+  background: var(--skin-background-muted);
+  border: 1px solid var(--skin-border-color-muted);
+  border-radius: var(--radius-sm);
+  transition:
+    background-color var(--transition),
+    color var(--transition),
+    border-color var(--transition);
   width: 100%;
+
+  &--open {
+    background: var(--skin-background);
+    border-color: var(--skin-border-color);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
 
   &__content {
     padding-top: var(--spacing-md);
+  }
+
+  &:hover {
+    border-color: var(--input-border-hover);
+  }
+
+  &:focus-within {
+    border-color: var(--input-border-focus);
   }
 }
