--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 @use 'variables/color';
 @use 'variables/font';
 @use 'variables/radius';
+@use 'variables/shadow';
 @use 'variables/spacing';
 @use 'variables/transition';
 
