--- a/src/components/content/Faq/Faq.module.scss
+++ b/src/components/content/Faq/Faq.module.scss
@@ -11,7 +11,7 @@
   &--open {
     background: var(--skin-background);
     border-color: var(--skin-border-color);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--shadow);
   }
 
   &__content {
