--- a/src/components/controls/Collapse/Collapse.module.scss
+++ b/src/components/controls/Collapse/Collapse.module.scss
@@ -1,6 +1,4 @@
 .collapse {
-  padding: var(--spacing-sm) var(--spacing-md);
-
   &__button {
     appearance: none;
     background: none;
@@ -37,6 +35,10 @@
 
   &__content {
     overflow: hidden;
+  }
+
+  &--padded {
+    padding: var(--spacing-sm) var(--spacing-md);
   }
 
   &--text-decoration-none {
