feat: add organic stream type

--- a/src/components/content/StreamDot/StreamDot.module.scss
+++ b/src/components/content/StreamDot/StreamDot.module.scss
@@ -23,4 +23,8 @@
   &--garden {
     background: var(--color-garden-stream);
   }
+
+  &--organic {
+    background: var(--color-organic-stream);
+  }
 }
