feat: add stream colors to ContainerSvg

--- a/src/styles/variables/container.scss
+++ b/src/styles/variables/container.scss
@@ -22,4 +22,10 @@ $colors: (
   'purple': var(--mobius-container-color-purple),
   'duckEgg': var(--mobius-container-color-duck-egg),
   'transparent': var(--mobius-container-color-transparent),
+  'no-stream': var(--mobius-color-no-stream),
+  'dry-stream': var(--mobius-color-dry-stream),
+  'residual-stream': var(--mobius-color-residual-stream),
+  'food-stream': var(--mobius-color-food-stream),
+  'garden-stream': var(--mobius-color-garden-stream),
+  'organic-stream': var(--mobius-color-organic-stream),
 );
