--- a/src/components/content/BarStack/BarStack.module.scss
+++ b/src/components/content/BarStack/BarStack.module.scss
@@ -14,6 +14,7 @@
 
   &__item {
     height: var(--bar-stack-item-height);
+    transition: height var(--transition);
 
     &:last-child {
       border-bottom-right-radius: var(--bar-stack-border-radius);
