docs: shuffle the sidebar around to be easier to digest

--- a/src/docs/foundations/tokens/breakpoints.module.scss
+++ b/src/docs/foundations/tokens/breakpoints.module.scss
@@ -1,4 +1,4 @@
-@use '../styles/variables/breakpoint';
+@use '../../../styles/variables/breakpoint';
 
 :export {
   @each $name, $bp in breakpoint.$map {
