--- a/src/components/canvas/Section/Section.module.scss
+++ b/src/components/canvas/Section/Section.module.scss
@@ -1,5 +1,5 @@
 .section {
-  background: var(--skin-background);
-  color: var(--skin-color);
+  background: var(--theme-background);
+  color: var(--theme-color);
   overflow: hidden;
 }
